--- a/css/pointCluster.css
+++ b/css/pointCluster.css
@@ -1,4 +1,4 @@
-html, body, #map {
+#map {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -8,7 +8,7 @@ html, body, #map {
 #map_box {
     font: 16px sans-serif;
     position: relative;
-    height: 99%;
+    height: calc(100% - 70px);
 }
 
 #too_many,
