--- a/css/timelineView.css
+++ b/css/timelineView.css
@@ -1,6 +1,5 @@
 
 body {
-    min-width: 1263px;
     font: 10px sans-serif;
 }
 
